# Convexia-alpha-4th-time-a-charm

./: .gitignore  CHANGELOG.md  README.md  env.example  pyproject.toml
configs/: v0.1.json  v1.2.json  v1.3.json  v1.4.json  v1.5.json  v1.6.json
eval/: README.md  __init__.py  __main__.py  attribution.py  benchmark.py  cli.py  diagnose_pipeline_attribution.py  env.example  matching.py  predictions_dfc71380.json  raw_run_dfc71380.json  reporting.py  types.py  utils.py
eval/mappings/: series_rules.example.json  synonyms.example.json  synonyms.json
eval/private/: cdk12_benchmark.csv
eval/sources/: __init__.py  common.py  local_json.py  supabase_rest.py
eval/tests/: __init__.py  test_regression.py  test_v14_identifier_contract.py  update_baseline.py
eval/tests/baselines/: previous.json
eval/tests/fixtures/: benchmark.csv  predictions.json  predictions_run2.json  (+2 more)
prompts/v0.1/: validator.md  worker_planner.md
prompts/v1.2/: loop_worker.md  recall_llm_extractor.md
prompts/v1.3/: loop_worker.md  recall_llm_extractor.md  validator.md  verifier.md  worker_planner.md
prompts/v1.4/: loop_worker.md  validator.md  verifier.md  worker_planner.md
prompts/v1.5/: draft_asset_builder.md  evidence_locator.md  loop_worker.md  recall_llm_extractor.md  validator.md  verifier.md  worker_planner.md
prompts/v1.6/: draft_asset_builder.md  evidence_locator.md  recall_llm_extractor.md  validator.md  worker_planner.md
src/drug_asset_discovery/: cli.py  config.py  logging.py  openai_client.py
supabase/: schema.sql
tools/: __init__.py  dump_benchmark.py  dump_run_assets.py
(+33 files in other folders)
